# beden2-rustdev

./: .gitignore  README.md
CRUD_restapi/restapi/: Cargo.toml
CRUD_restapi/restapi/src/: main.rs
Homework1/: Cargo.toml  Dockerfile
Homework1/src/: answers.json  answers.rs  error.rs  main.rs  questions.json  questions.rs  set.html
ch02/src/: main.rs
final_project/: .gitignore  Cargo.toml  Dockerfile  index.html
final_project/src/: answers.json  answers_form.html  main.rs  post.html  questions.json  questions.rs
final_project/src/backend/: main.rs  post.html
final_project/src/frontend/: lib.rs
minimal_http/: Cargo.toml
minimal_http/src/: main.rs
using_match/: Cargo.toml
using_match/src/: main.rs
