[package]
name = "minimal_http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.3", features = ["full"] }
reqwest = "0.11"
axum = "0.7.2"
hyper = "1.3.1"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
axum-server = "0.6.0"