[package]
name = "minimal_http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.3", features = ["full"] }
reqwest = "0.11"
axum = { version = "0.7.2", features = ["tokio"] }
hyper = "1.3.1"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
axum-server = "0.6.0"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }
dotenv = "0.15.0"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
sqlx = { version = "0.7.4", features = ["runtime-async-std-native-tls", "mysql", "chrono", "uuid"] }
chrono = { version = "0.4.37", features = ["serde"] }

